2005-05-17  Mikael Hallendal  <micke@imendio.com>

	* gconf/gconf-client.c: 
	- Don't free the entry key here, owned by the entry.
	- Fix already in HEAD in GConf.

2005-04-27  Richard Hult  <richard@imendio.com>

	Release 2.6.4.5.
	
	* configure.in: Bump version.

2005-04-26  Richard Hult  <richard@imendio.com>

	* backends/markup-backend.c (sync_all, ms_new): Don't use
	gconf_main_quit, since it's in the daemon. Just exit instead and
	don't change the state flag.

2005-04-26  Richard Hult  <richard@imendio.com>

	* Release 2.6.4.4.
	
	Disable debug and restore the default conf to the normal one.
	
	* gconf/gconf-database.c (gconf_database_schedule_sync): Use a
	define for the sync timeout, and make it re-schedule a new timeout
	if we already have one. This makes the syncing group writes that
	are close in time together.

	* configure.in: Add flag for dbus service files location.
	Bump version. Add some info when running configure on what options
	were choosen.

	Add reliable writes to handle shutdown in the middle of writing a
	set of keys better.
	
	* backends/Makefile.am:
	* backends/gconf-merge-tree.c:
	* backends/markup-write-state.[ch]: Add functions for handling the
	write state.
	
	* backends/markup-backend.c: 
	* backends/markup-tree.c: Use the write state functions and save
	the data to two databases and update the state accordingly.

	* gconf/default.path.in: Mark the writable source in the homedir
	as reliable.

	* gconf/gconf-database.c: (gconf_database_schedule_sync): Use a
	smaller timeout.
	
	* gconf/gconfd.c: Add a define for helping debugging the daemon.

2005-02-10  Richard Hult  <richard@imendio.com>

	* configure.in: Bump version to 2.6.4.3.

	* gconf/gconfd-dbus.c (server_filter_func, gconfd_dbus_init):
	Don't exit on disconnect, handle Disconnect signal and exit
	cleanly.

2005-01-27  Mikael Hallendal  <micke@imendio.com>

	* gconf/gconf-database-dbus.c: (database_filter_func),
	(database_handle_service_owner_changed):